fixed sizing of images to be aligned through css -article-img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,11 +576,10 @@ footer {
 
 }
 
-.article-img {
+#article-img {
    max-width: 100%;
-   height: auto;
+   height: 265px;
 }
-
 
 .row {
    margin-top: 25px;
